task 151. junior.pack2.p5.ch1.task3 v2 Prime number iterator